// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marking last incorrect answer correct locks toggles 1`] = `
<DocumentFragment>
  <div
    class="toggles-question correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="toggle-option"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="toggle-option selected"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`marking last incorrect answer correct updates status text 1`] = `
<DocumentFragment>
  <div
    class="toggles-question correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="toggle-option"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="toggle-option selected"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`renders the component 1`] = `
<DocumentFragment>
  <div
    class="toggles-question incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="toggle-option"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="toggle-option selected"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;

exports[`toggling an option marks it as selected 1`] = `
<DocumentFragment>
  <div
    class="toggles-question incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="toggle-option"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="toggle-option selected"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="toggle-option"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="toggle-option selected"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="toggle-option selected"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="toggle-option"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;
